--- a/style.css
+++ b/style.css
@@ -1,45 +1,181 @@
-* {
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Ubuntu" , sans-serif;
 }
 
-.site {
+.site{
+
     display: flex;
     flex-direction: column;
 }
 
-.conteudo {
-    width: 1320px;
-    margin: 0 auto;
-    border: dotted 2px #000;    
+ /***  CABECALHO ***/
 
-}
+.cabecalho{
 
-/*** cabecalho 888***/
-.cabessalho {
     height: 120px;
     background-color: transparent;
-    background-image: linear-gradient(180deg, #FFFFFF 80%, #D8D8D8 100%);
-    justify-content: space-between;
+    background-image: linear-gradient(180deg, #ffffff 0%, #DBDBDB 100%);
 }
 
-.cabessalho .conteudo{
+.conteudo{
+    width: 1320px;
+    margin: 0 auto;
+    border: dotted 2px #000;
+}
+
+.cabecalho .conteudo{
+
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
+
 }
 
-.cabessalho .conteudo .logo {
+.cabecalho .conteudo .logo{
+
     width: 175px;
-
 }
 
-.cabessalho .conteudo .menus ul {
+.cabecalho .conteudo .menus ul{
+
     display: flex;
     gap: 20px;
+
     list-style: none;
 }
 
+
+/* MENU */
+
+.menu{
+    height: 60px;
+    background-image: linear-gradient(180deg, #ffffff 0%, #DBDBDB 100%);;
     
+    display: flex;
+}
+
+.menu .conteudo{
+    display: flex;
+    align-items: center;
+}
+
+.menu ul{
+
+    width: 100%;
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+}
+
+.menu ul li a{
+    text-decoration: none;
+    color: #003a6c;
+    font-weight: 450;
+    padding: 20px;
+}
+
+.menu ul li a:hover{
+    background-color: #fff;
+}
+
+/** BANNER **/
+
+/*.banner img{
+    width: 100%;
+}*/
+
+.banner{
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+}
+
+/* Noticias e Competencias */
+
+.noticias-competencias{
+
+    background-image: linear-gradient(180deg, #00315E 0%, #000825 100%);
+
+}
+
+.noticias-competencias h2{
+    color: #fff;
+    font-weight: 500;
+    margin-top: 80px;
+    font-size: 28px;
+}
+
+.conteudo-noticias{
+    display: flex;
+    justify-content: space-between;
+}
+
+.card-noticias{
+
+    flex-basis: 24%;
+    background-color: #fff;
+    border-radius: 10px;
+    overflow: hidden;
+    padding-bottom: 20px;
+}
+
+.card-noticias .card-noticias-imagem{
+
+    height: 220px;
+    overflow: hidden;
+    position: relative;
+}
+
+.card-noticias .card-noticias-data{
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #003c6ab6;
+
+    position: absolute;
+    top: 180px;
+    width: 100%;
+    
+    color: #fff;
+    font-weight: 300;
+}
+
+.card-noticias .card-noticias-imagem img{
+
+    width: 100%;
+    transition: all 0.7s ease-out;
+}
+
+.card-noticias .card-noticias-imagem:hover img{
+
+    transform: scale(1.3);
+
+}
+
+.card-noticias .card-noticias-texto{
+
+    padding: 20px;
+    font-weight: 300;
+    line-height: 22px;
+    color: #003c6a;
+}
+
+.card-noticias .leia-mais .btn{
+
+    background-color: #DBDBDB;
+    padding: 5px 10px;
+    border-radius: 15px;
+
+    text-decoration: none;
+    float: right;
+    margin-right: 20px;
+    font-weight: 300;
+    font-size: 15px;
+}
